--- a/hooks/build
+++ b/hooks/build
@@ -7,6 +7,8 @@ SOURCE_COMMIT=${SOURCE_COMMIT:-$(git log --no-decorate|grep '^commit'|head -n 1|
 GH_API=https://api.github.com/
 GH_PROJECT=cern-fts/davix
 
+MINVER=${MINVER:-0.7.2}
+
 # shellcheck disable=SC1091
 . "$(dirname "$0")/reg-tags/image_tags.sh"
 
@@ -26,24 +28,27 @@ token=$(img_auth "$DOCKER_REPO")
 
 echo "============== Gettings latest releases for $GH_PROJECT at github"
 for rtag in $(gh_tags); do
-  # Get the revision out of the org.opencontainers.image.revision label, this
-  # will be the label where we store information about this repo (it cannot be
-  # the tag, since we tag as the base image).
-  revision=$(img_labels --verbose --token "$token" -- "$DOCKER_REPO" "$tag" |
-              grep "^org.opencontainers.image.revision" |
-              sed -E 's/^org.opencontainers.image.revision=(.+)/\1/')
-  # If the revision is different from the source commit (including empty,
-  # which will happen when our version of the image does not already exist),
-  # build the image, making sure we label with the git commit sha at the
-  # org.opencontainers.image.revision OCI label, but using the same tag as the
-  # library image.
-  if [ "$revision" != "$SOURCE_COMMIT" ]; then
-    tag=$(printf %s\\n "$rtag" | sed -e 's/R_//' -e 's/_/\./g')
-    echo "============== No ${DOCKER_REPO}:$tag at $SOURCE_COMMIT"
-    docker build \
-      --build-arg DAVIX_VERSION="$tag" \
-      --tag "${DOCKER_REPO}:$tag" \
-      --label "org.opencontainers.image.revision=$SOURCE_COMMIT" \
-      .
+  tag=$(printf %s\\n "$rtag" | sed -e 's/R_//' -e 's/_/\./g')
+  if [ "$(img_version "$tag")" -ge "$(img_version "$MINVER")" ]; then
+    # Get the revision out of the org.opencontainers.image.revision label, this
+    # will be the label where we store information about this repo (it cannot be
+    # the tag, since we tag as the base image).
+    revision=$(img_labels --verbose --token "$token" -- "$DOCKER_REPO" "$tag" |
+                grep "^org.opencontainers.image.revision" |
+                sed -E 's/^org.opencontainers.image.revision=(.+)/\1/')
+    # If the revision is different from the source commit (including empty,
+    # which will happen when our version of the image does not already exist),
+    # build the image, making sure we label with the git commit sha at the
+    # org.opencontainers.image.revision OCI label, but using the same tag as the
+    # library image.
+    if [ "$revision" != "$SOURCE_COMMIT" ]; then
+      tag=$(printf %s\\n "$rtag" | sed -e 's/R_//' -e 's/_/\./g')
+      echo "============== No ${DOCKER_REPO}:$tag at $SOURCE_COMMIT"
+      docker build \
+        --build-arg DAVIX_VERSION="$tag" \
+        --tag "${DOCKER_REPO}:$tag" \
+        --label "org.opencontainers.image.revision=$SOURCE_COMMIT" \
+        .
+    fi
   fi
 done
